# simple_simplex

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
simple_simplex/: solver.py
